Refactor: исправить замечания после ревью